--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-"Hello World"
+<html>
+<head>
+<title>С Новым годом!</title>
+<!--<link rel="stylesheet" type="text/css"
+      href="css файл.css">-->
+</head>
+<body>
+<style>
+body{
+	background: url("fsd.jpeg")  no-repeat;
+	background-size: cover;
+}
+h1{
+	font-size: 1000%;
+	color:red;
+}
+p.a{
+	color: blue;
+	font-size:200%;
+}</style>
+<h1 align = "center">С Новым годом!</h1>
+<iframe width="800" height="600" align = "left" src="https://www.youtube.com/embed/IbyCCE0v35A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<p class = "a" align = "center"><i>Год Свиньи наступит скоро,</i></p>
+<p class = "a" align = "center"><i>Мы желаем вам задора,</p></i>
+<p class = "a" align = "center"><i>Чтоб хорош был Новый Год</p></i>
+<p class = "a" align = "center"><i>Хрюкнуть нужно раз пятьсот!</p></i>
+<p>  </p>
+
+<p class = "a" align = "center"><i>Пусть желанья и мечты</p></i>
+<p class = "a" align = "center"><i>Свинкой будут учтены,</p></i>
+<p class = "a" align = "center"><i>Пусть всё будет исполняться</p></i>
+<p class = "a" align = "center"><i>В год две тысячи девятнадцать!</p></i>
+
+</body>
+</html>
