--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@ p.a{
 <p class = "a" align = "center"><i>Свинкой будут учтены,</p></i>
 <p class = "a" align = "center"><i>Пусть всё будет исполняться</p></i>
 <p class = "a" align = "center"><i>В год две тысячи девятнадцать!</p></i>
-<iframe width="800" height="600" align = "bottom" src="https://www.youtube.com/embed/IbyCCE0v35A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="800" height="600" align = "right" src="https://www.youtube.com/embed/IbyCCE0v35A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
